src/App.css
:root{
  --primary-color : #34568B;
  --accent-color : #FF6F61;
  --background-color : #FFFCEC;
  --text-color : #333333;
  --secondary-accent-color : #88BDBC;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  --fonts-softSans: Marlin Soft SQ, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
}

* {
  box-sizing: border-box;
}


body {
  color: var(--text-color);
  margin: 0;
  height: 100vh;
  overflow-x: hidden;
}

html{
  scroll-behavior: smooth;
}

.button-secondary {
  background-color: var(--secondary-accent-color);
  color: #fff; 
}


.logo {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 5px;
  margin-right: auto;
  margin-left: auto;
  margin-top: 10px;
  width: 200px;
  background: rgba(255, 255, 255, 0.1);
  border: 1px solid rgba(255, 255, 255, 0.2);
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(10px);
  border-radius: 16px;
}

.logoPNG {
  object-fit: fill;
  height: auto;
  max-width: 70%;
}

h1.logo {
  color: var(--accent-color);
}

.rotate {
  animation: rotateAnim 8s linear infinite;
}

@keyframes rotateAnim {
  0% {
    transform: rotate(0deg) translateY(0);
  }
  50% {
    transform: rotate(180deg) translateY(-20px);
  }
  100% {
    transform: rotate(360deg) translateY(0);
  }
}




.floating {
  position: relative;
  animation: float 8s ease-in-out infinite;
}

@keyframes float {
  0%,
  100% {
    transform: translateY(0); 
  }
  50% {
    transform: translateY(-20px); 
  }
}



.floating-rotate {
  animation: float-rotate 10s ease-in-out infinite;
}


@keyframes float-rotate {
  0%,
  100% {
    transform: translateY(0) rotate(0deg); 
  }
  50% {
    transform: translateY(-20px) rotate(5deg); 
  }
}


.flight-throught-tl-br {
  opacity: 80%;
  animation: flightThroughtAnimationTopLeftBottomRight 20s linear infinite ;
}

@keyframes flightThroughtAnimationTopLeftBottomRight {
  0% {
    transform: translateX(-100vw) translateY(-20vh);
  }
  100% {
    transform: translateX(100vw) translateY(60vh);
  }
}

